infra/k8s/order-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: bhatia746/order:0.0.1
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip-srv
spec:
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3002
      targetPort: 3002
