infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: bhatia746/products:0.0.1
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: product-clusterip-srv
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 3001
      targetPort: 3001
