infra/k8s/ingress-srv.yaml
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-srv
#   annotations:
#     kubernetes.io/ingress.class: nginx
# spec:
#   rules:
#     - host: localhost
#       http:
#         paths:
#           - path: /product
#             backend:
#               servicename: product-clusterip-srv
#               serviceport: 3001

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ecomerce.com
      http:
        paths:
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-clusterip-srv
                port:
                  number: 3001
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-clusterip-srv
                port:
                  number: 3002
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway-clusterip-srv
                port:
                  number: 3000


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-srv
# spec:
#   rules:
#     - host: product.com
#       http:
#         paths:
#           - path: /product
#             pathType: Prefix
#             backend:
#               service:
#                 name: product-clusterip-srv
#                 port:
#                   number: 3001
